--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,5 +1,38 @@
 2003-06-13  Corinna Vinschen  <vinschen@redhat.com>
 
+	* h8300-tdep.c: Add definitions E_RET0_REGNUM and E_RET1_REGNUM to
+	indicate registers used for return values.
+	(struct frame_extra_info): Drop args_pointer and locals_pointer.
+	(h8300_examine_prologue): Remove initializing dropped frame_extra_info
+	members.
+	(h8300_init_extra_frame_info): Ditto.
+	(h8300_frame_locals_address): Removed.
+	(h8300_frame_args_address): Removed.
+	(h8300_extract_return_value): Use new regcache structure. Only care
+	for 16 bit CPUs.
+	(h8300h_extract_return_value): Same function for 32 bit CPUs.
+	(h8300_store_return_value): Use new regcache structure. Only care
+	for 16 bit CPUs.
+	(h8300h_store_return_value): Same function for 32 bit CPUs.
+	(h8300_store_struct_return): Removed.
+	(h8300_extract_struct_value_address): Use new regcache structure.
+	(h8300h_extract_struct_value_address): Removed.
+	(h8300_push_dummy_code): New function.
+	(h8300_gdbarch_init): Slightly rearranged to stress deprecated calls.
+	Remove call_dummy_words.  Call set_gdbarch_extract_return_value and
+	set_gdbarch_store_return_value architecture dependent.
+	Call set_gdbarch_push_dummy_code and
+	set_gdbarch_extract_struct_value_address.
+	Remove calls to set_gdbarch_frame_args_address,
+	set_gdbarch_frame_locals_address,
+	set_gdbarch_deprecated_store_struct_return,
+	set_gdbarch_deprecated_extract_return_value,
+	set_gdbarch_deprecated_extract_struct_value_address,
+	set_gdbarch_deprecated_call_dummy_words and
+	set_gdbarch_deprecated_sizeof_call_dummy_words.
+
+2003-06-13  Corinna Vinschen  <vinschen@redhat.com>
+
 	* h8300-tdep.c (h8300_register_byte): Remove.
 	(h8300h_register_byte): Remove.
 	(h8300_register_virtual_type): Remove.  Substitute by...
@@ -154,7 +187,7 @@
 	(h8300sx_register_name): Ditto for H8SX registers.
 	(h8300_print_register): Revise register printing, avoid depending
 	on 32 bit long.
-	(h8300_register_byte); Only care for H8/300 registers.
+	(h8300_register_byte): Only care for H8/300 registers.
 	(h8300h_register_byte): New function for any other architecture.
 	(h8300_register_raw_size): Remove.
 	(h8300_register_virtual_type): Revise to return actually useful
