--- a/gdb/doc/ChangeLog
+++ b/gdb/doc/ChangeLog
@@ -1,3 +1,9 @@
+2003-06-13  Andrew Cagney  <cagney@redhat.com>
+
+	* gdbint.texinfo (Target Architecture Definition): Deprecate
+	REMOTE_BREAKPOINT, LITTLE_REMOTE_BREAKPOINT, and
+	BIG_REMOTE_BREAKPOINT.  Cross reference BREAKPOINT_FROM_PC.
+
 2003-06-09  Jim Blandy  <jimb@redhat.com>
 
 	* gdb.texinfo (Separate Debug Files): Remove extra semicolon.
