--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-14  Theodore A. Roth  <troth@openavr.org>
+
+	* avr-tdep.c (avr_scan_prologue): Fix to avoid a buffer over run which
+	causes gdb to seg fault.
+
 2003-06-14  Daniel Jacobowitz  <drow@mvista.com>
 
 	* sparc-nat.c (fetch_inferior_registers): Correct
