--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,5 +1,11 @@
 2003-06-15  Mark Kettenis  <kettenis@gnu.org>
 
+	* i386-tdep.c (i386_next_regnum): Fix bounds checking.
+	(i386_convert_register_p, i386_register_to_value,
+	i386_register_from_value): Handle types longer than 8 bytes.
+
+2003-06-15  Mark Kettenis  <kettenis@gnu.org>
+
 	* i386-tdep.c (i386_register_to_value, i386_value_to_register):
 	Move floating-point code to new function in i387-tdep.c.
 	* i387-tdep.c (i387_register_to_value, i387_value_to_register):
