--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,8 @@
+2003-06-16  Theodore A. Roth  <troth@openavr.org>
+
+	* avr-tdep.c (avr_extract_return_value): New function.
+	(avr_gdbarch_init): Set extract_return_value method.
+
 2003-06-16  Andrew Cagney  <cagney@redhat.com>
 
 	* frame.h (deprecated_get_next_frame_hack): Declare.
